Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-623: Website Documentation: table of parameters (armax00 via nitay)

  GIRAPH-694 Setting configuration in GiraphConfiguration causes 
  non thread safe copies (aching)

  GIRAPH-683: Jython for Computation (nitay)

  GIRAPH-673: Input superstep should support aggregators like any 
  other superstep (Bingjing via aching)

  GIRAPH-686: DiskBackedPartitionStore does not saveVertex after edges 
  are loaded (claudio)

  GIRAPH-681: Graphviz Output Format (nitay)

  GIRAPH-468: Make Vertex an Interface (nitay)

  GIRAPH-667: all workers suspended at 'saveVertices' when use 
  out of core (claudio)

  GIRAPH-670: [easy] Example Max Computation (nitay)

  GIRAPH-675: Mutable edge iterator gets corrupted by calling
  vertex.getNumEdges() during iteration (apresta)

  GIRAPH-512: JavaDoc warnings (emre.aladag via nitay)

  GIRAPH-620: Website Documentation: How to use Hive I/O with Giraph (nitay)

  GIRAPH-667: Decouple Vertex data and Computation, make Computation
  and Combiner classes switchable (majakabiljo)

  GIRAPH-608: Spelling error in Combiner.java (Michael Aro via aching)

  GIRAPH-666: Netty execs threads and metrics threads don't get 
  cleaned up properly (aching)

  GIRAPH-665: Reduce ZooKeeper output in tests by changing log level from 
  INFO to ERROR (aching)

  GIRAPH-664: Bump HiveIO dep - fixes tests with hadoop facebook
  (nitayj via majakabiljo)

  GIRAPH-622: Website Documentation: Out-of-core (claudio)

  GIRAPH-659: giraph-hive tests all fail (majakabiljo)

  GIRAPH-663: Fix HiveIO metastore host setting (nitay)

  GIRAPH-661: Munge symbols helper (nitay)

  GIRAPH-662: Incubator release should point to archived (aching)

  GIRAPH-655: Fix Hive Build for Hadoop 2.0.0 (nitay)

  GIRAPH-660: Move the snapshot to 1.1.0 and also add a releases page for 
  the 1.0 release (aching)

  GIRAPH-560: Input filtering (nitay)

  GIRAPH-621: Website Documentation: Basic Design Document (aching)
