@@ -1,9 +1,12 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-695: Add getCombiner and getComputation methods for 
+  MasterCompute (aching)
+
   GIRAPH-623: Website Documentation: table of parameters (armax00 via nitay)
 
-  GIRAPH-694 Setting configuration in GiraphConfiguration causes 
+  GIRAPH-694: Setting configuration in GiraphConfiguration causes 
   non thread safe copies (aching)
 
   GIRAPH-683: Jython for Computation (nitay)
